Fixed tab shift for dev and copy pages on ipad pro

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -149,6 +149,12 @@ h2 {
     -moz-box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
 }
 
+@media screen and (max-width: 1024px) {
+    .sliderTitle1 {
+        margin-top: 27rem;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .sliderTitle1 {
         right: 3rem;
@@ -191,6 +197,11 @@ h2 {
     -moz-box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
 }
 
+@media screen and (max-width: 1024px) {
+    .sliderTitle2 {
+        margin-top: 27rem;
+    }
+}
 
 @media screen and (max-width: 768px) {
     .sliderTitle2 {
